jest is working again

--- a/apps/app/src/app/app.component.html
+++ b/apps/app/src/app/app.component.html
@@ -1,3 +1,5 @@
+<h1>Welcome to clr-testing-repro!</h1>
+
 <clr-dropdown [clrCloseMenuOnItemClick]="false">
   <button clrDropdownTrigger aria-label="Dropdown demo button">
       <clr-icon shape="error" class="is-error" size="24"></clr-icon>
